[project]
name = "procastro"
version = "0.0.1"
description = "Framework to easily schedule astronomical observations"
requires-python = ">=3.13"


authors = ["Patricio Rojo <pato@das.uchile.cl>"]
license = "BSD-3-Clause"
readme = "README.md"
documentation = "https://obsastro.readthedocs.io/en/latest/"
repository = "https://github.com/duckrojo/obsastro"
exclude = [
    "execs"
]

dependencies = [
    "astropy>=7.1.0",
    "astroquery>=0.4.10",
    "cachetools>=6.1.0",
    "cartopy>=0.24.1",
    "diskcache>=5.6.3",
    "jplephem>=2.23",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "platformdirs>=4.3.8",
    "scipy>=1.16.0",
    "tomli-w>=1.2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
]

